--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,13 @@ zip = "0.5.11"
 tempdir = "0.3"
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
+# For webapp:
+actix-web = "4.0"
+actix-multipart = "0.4"
+actix-files = "0.6.6"
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", features = ["blocking"] }
+futures-util = "0.3"
+uuid = {version = "1.11.0", features = ["v4"]}
+lazy_static = "1.5.0"
+mime = "0.3.17"
