--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "converter_rust"
-version = "0.1.1"
+name = "mania-converter"
+version = "0.2.1"
+authors = ["Siflorite <monokhrom@163.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
