--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "mania-converter"
-version = "0.4.1"
+version = "0.5.0"
 authors = ["Siflorite <monokhrom@163.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace]
-members = ["webapp"]
+members = ["binaries/webapp", "binaries/standalone"]
 
 [dependencies]
 walkdir = "2.5"
@@ -16,3 +16,6 @@ tempdir = "0.3"
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
 rayon = "1.10"
+# For picture generation
+handlebars = "6.3"
+resvg = "0.45"
