--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mania-converter"
-version = "0.5.1"
+version = "0.6.0-b"
 authors = ["Siflorite <monokhrom@163.com>"]
 edition = "2021"
 
@@ -11,7 +11,7 @@ members = ["binaries/webapp", "binaries/standalone"]
 
 [dependencies]
 walkdir = "2.5"
-zip = "2.6"
+zip = "4.0"
 tempdir = "0.3"
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
@@ -19,3 +19,4 @@ rayon = "1.10"
 # For picture generation
 handlebars = "6.3"
 resvg = "0.45"
+lazy_static = "1.5"
